Fixed: Content alignment issue

--- a/Day18/assets/css/style.css
+++ b/Day18/assets/css/style.css
@@ -38,6 +38,7 @@ main {
 
 main .content {
   display: flex;
+  align-items: center;
   gap: 16px;
 }
 
